- For Ilia: - MFH: Fixed bug #30572 (crash when comparing SimpleXML attribute to a boolean). - Hope this works well. I will MFH tomorrow if no one complains.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@171511 c90b9560-bf6c-de11-be94-00142212c4b1